public/stylesheets/base.css
/* ... */
.layerName {
    position: center;
    float: left;
    line-height: 20px;
    width: 60%;
}

.ui-slider .ui-slider-handle {
    width:1em;
    height: 1em;
    /*text-decoration:none;*/
    /*text-align:center;*/
}

.ui-slider-horizontal .ui-slider-handle {
    top: -.17em;
    /*margin-left: -.6em;*/
}

#custom-handle {
    width: 3em;
    height: 1.6em;
    top: 50%;
    margin-top: -.8em;
    text-align: center;
    line-height: 1.6em;
  }

.nodes {
    font-size: 12px;
    font-family: 'Karla', sans-serif;
    font-weight: 400;
    color: rgb(100,100,100);
    position: relative;
    width: 80%;
    text-align: left;
    margin: 0;
}

.nodes ul p {
    /*border-bottom: 2px solid rgba(0,0,0,0);*/
    margin-bottom: 0;
    margin-top: -10px;
    font-family: 'Karla', sans-serif;
}

.nodeNamesSelected {
	/*border-bottom: 2px solid #f55 !important;*/
	width: 100%;
	margin:0 auto;
}

.nodes ul p:hover {
	background-color: rgba(100,100,100,0.3);
	cursor: pointer;
}

.copyright {
	font-size: 10px;
	color: rgb(100,100,100);;
    bottom: 8vh;
    position: absolute;
    right: 10px;
    z-index: 1;
}

.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
    /*border: 1px solid #003eff;*/
    /* background: #007fff; */
    font-weight: normal;
    color: #ffffff;
}

.buttons {
    height:30px;
    bottom: 0px;
    line-height: 30px;
    border-radius: 0;
    z-index: 5;
    font-size: 15px;
    font-family: 'Karla', sans-serif;
    vertical-align: middle;
    display: inline-block;
    color: black;
    margin-bottom: 0px;
    margin-top: 0px;
    background-color: #D34031;
    border: none;
    padding: 0;
}

.buttons:active, buttons:focus {
    background-color: #B2322B;
    color: white;
}

.buttons:hover {
	background-color: #B2322B;
	cursor: pointer;
    color: white;
}

.tooltip {
    background-color: transparent;
    height: auto;
    display: block;
    text-align: center;
    font-family: 'Karla', sans-serif;
    width: 5vw;
}

.mydiv {
    /*float: left;*/
    margin: 0px;
    height: 22px;
    margin-top: 10px;
    transform: translateY(-18%);
    overflow: hidden;
    font-size: 13px;
    font-weight: 500;
    text-align: left;
    font-family: 'Karla', sans-serif;
}

.mydiv .rightAlign {
    text-align: right;
    float: right;
}

.layerBoxes {
    display: block;
    float: left;
    width: 100%;
    /*border-top: 1px solid white;*/
    padding-top: 1px;
    margin-top: -2px;
    font-family: 'Karla', sans-serif;
}

.layerBoxes button {
    /*padding: 0px !important;*/
    /*height: 18px !important;*/
    font-family: 'Karla', sans-serif;
    font-size: 11px;
    font-weight: 300;
    width: 17%;
    float: right;
    text-align: center;
}

.layerBoxes input {
    /*padding: 0px !important;*/
    /*height: 15px !important;*/
    width: 6%;
    position: relative;
    top: 100%;
    /*transform: translateY(-50%);*/
}

.buttonsText {
    /*position: absolute;*/
    /*z-index: 10;*/
    /*bottom: 0;*/
    font-size: 15px;
    font-family: 'Karla', sans-serif;
    font-weight: 500;
    vertical-align: middle;
    color: white;
    text-align: center;
}

.sp-replacer{
    width: 6%;
    position: relative;
    top: 50%;
    /*transform: translateY(-50%);*/
}

.sliderCell.opacity {
    position: relative;
    padding-bottom: 10px;
}

/*@media (min-width: 768px)*/
.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
}
.navbar-inverse .navbar-brand {
    color: white;
}

/*.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
}*/

.navbar-brand {
    float: left;
    font-size: 24px;
    padding-top: 0;
    padding-bottom: 0;
    font-weight: 700;
    font-family: 'Karla', sans-serif;
}

.progress-bar {
    width: 100%;
    height: 20px;
}

.progress {
    background-color: white;
}


/* Begin Progress Tracker CSS*/
.progress-tracker-body {
    /* background: linear-gradient(to bottom, #ffffff 0%,#f6f6f6 47%,#ededed 100%);  */
    padding:1vh 1vh;
    margin: 1vh 1vh 0px 0px;
    -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.26);
    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.26);
    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.26);
    background-color: black;
    /* max-height: 310px; */

}
#widget-menu {
    display: flex;
    flex-flow: row wrap;
}
#jobList{
    -webkit-padding-start: 10px!important;
    -webkit-padding-end: 10px!important;
    overflow-y: auto;
    max-height: 310px;
    
}
#widget-menu .container {
    width: auto!important;
    align-content: left;


}
#widget-menu .progress-bar {
    width: 100%;
    height: 20px;
    float: none;
    display: block;    
}

#widget-menu .button {
    float: right;
    display: inline-block;
    
}

.menu-item {
    flex: 1;
    justify-content: left;
    position: relative;
    width: 100%;
    max-width: 200px;
    text-overflow: ellipsis;
    margin: 5% auto;
    background: #FAFAFA;
    background-color: #FAFAFA;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E7EEF4');
    background: -moz-linear-gradient(top, #FAFAFA, #E7EEF4);
    background: -webkit-gradient(linear, left top, left bottom, from(#FAFAFA), to(#E7EEF4));
    height: auto;
    padding: 10px; 
    border: solid 1px #DCDCDC;
    border-bottom: solid 1px #98B1C7;
    -moz-border-radius: .5em; 
    -webkit-border-radius: .5em;
    -moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
    -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
}

#widget-menu .fa {
    background:  linear-gradient(to bottom, #ffffff 0%,#f6f6f6 47%,#ededed 100%);
    display: inline-block;
    border-radius: 60px;
    box-shadow: 0px 0px 2px #888;
    padding: 0.1em 0.125em;
    position: absolute;
    left: 3px;
    top: 3px;
    cursor: pointer;
}

#widget-menu .fa-question {
    top: -8px !important;
    left: -5px;
}


.menu-item .progress-label {
    position: relative;
    margin-left: 5px;
    text-overflow: ellipsis;
}
/* ... */

